# LimpiaImagenes

./: .gitignore  build_macos.spec  build_windows.spec  config.json  installer.iss  main.py
.github/workflows/: build-windows-cpp.yml  macos-build-cpp-intel.yml  macos-build-cpp.yml  macos-build.yml  windows-build-cpp.yml  windows-build.yml  windows-installer.yml
assets/: LEEME-MACOS.txt  logo.icns
cpp_app/: CMakeLists.txt  README.md  vcpkg.json
cpp_app/src/: denoise.cpp  denoise.h  gui_main.cpp  main.cpp
scripts/: generate_dmg_background.py
